# telegram-bot

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  VERSION.md  bot.py  cities.txt  cli.py  config.py  database.py  map.db  pyproject.toml  version.md
docs/superpowers/plans/: 2026-03-12-rbac-auth.md
docs/superpowers/specs/: 2026-03-12-rbac-auth-design.md
handlers/: admin_mgmt.py  audio.py  auto_reply.py  camera.py  circle.py  forecast.py  group.py  help.py  inline.py  log.py  mygroups.py  photo.py  poll.py  rate.py  start.py  time.py  top.py  weather.py  webcams.py
middlewares/: auth.py  circle_location.py  command_logging.py
tests/: test_audio.py  test_camera.py  test_circle.py  test_cli.py  test_database_rbac.py  test_log.py  test_migration.py  test_mygroups.py  test_rate.py  test_rbac_middleware.py  test_start.py  test_time.py  test_version.py  test_webcams.py
tools/: analyze_screenshot.py  cleanup_audio.md  cleanup_audio.py  generate_docs.sh  get_vlc_link.md  get_vlc_link.py  migrate_auth.py  mock_aiogram.py  populate_cities.md  populate_cities.py  test_rbc_api.md  test_rbc_api.py
tools/gpu/: check_gpu.py  check_ov_devices.py  test_load_gpu.py
