[project]
name = "telegram-bot"
version = "0.1.2"
description = "telegram bot experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "geopy>=2.4.1",
    "python-dotenv>=1.2.1",
    "timezonefinder>=8.2.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
