[project]
name = "telegram-bot"
version = "0.4.3"
description = "telegram bot experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "geopy>=2.4.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "timezonefinder>=8.2.1",
    "optimum[openvino]>=1.26.0",
    "transformers>=4.48.0",
    "accelerate>=1.3.0",
    "numpy>=2.2.0",
    "ffmpeg-python>=0.2.0",
    "onvif-zeep>=0.2.12",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
